force-app/main/default/objects/ND__c/ND__c.object-meta.xml
<CustomObject>
    <label>Note de Dépense</label>
    <nameField>
        <displayFormat>ND{000}</displayFormat>
        <label>Numéro ND</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Notes de Dépenses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>