force-app/main/default/objects/ND__c/fields/Approval_Flag_Direction_Siege__c.field-meta.xml
<CustomField>
    <fullName>Approval_Flag_Direction_Siege__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Approval Flag Direction Siege</label>
    <type>Checkbox</type>
</CustomField>