force-app/main/default/objects/ND__c/fields/Contact_Directeur_R_seau__c.field-meta.xml
<CustomField>
    <fullName>Contact_Directeur_R_seau__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact Directeur Réseau</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Notes de Dépenses (Contact Directeur Réseau)</relationshipLabel>
    <relationshipName>Notes_de_D_penses2</relationshipName>
    <type>Lookup</type>
</CustomField>