force-app/main/default/objects/ND__c/fields/ContactD__c.field-meta.xml
<CustomField>
    <fullName>ContactD__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact Direction</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Notes_de_D_penses</relationshipName>
    <type>Lookup</type>
</CustomField>