force-app/main/default/objects/ND__c/fields/contactDD__c.field-meta.xml
<CustomField>
    <fullName>contactDD__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact Direction</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Notes de Dépenses</relationshipLabel>
    <relationshipName>Notes_de_D_penses</relationshipName>
    <type>Lookup</type>
</CustomField>