force-app/main/default/objects/ND__c/fields/ContactDFC__c.field-meta.xml
<CustomField>
    <fullName>ContactDFC__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact DFC</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Notes de Dépenses (Contact DFC)</relationshipLabel>
    <relationshipName>Notes_de_D_penses1</relationshipName>
    <type>Lookup</type>
</CustomField>