force-app/main/default/objects/ND__c/fields/Count_Don__c.field-meta.xml
<CustomField>
    <fullName>Count_Don__c</fullName>
    <label>NB Dons</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>