force-app/main/default/objects/ND__c/fields/Date_Approbation_Directeur_R_seau__c.field-meta.xml
<CustomField>
    <fullName>Date_Approbation_Directeur_R_seau__c</fullName>
    <label>Date Approbation Directeur Réseau</label>
    <type>DateTime</type>
</CustomField>