force-app/main/default/objects/ND__c/fields/Date_Approbation_Direction__c.field-meta.xml
<CustomField>
    <fullName>Date_Approbation_Direction__c</fullName>
    <label>Date Approbation Direction Réseau</label>
    <type>DateTime</type>
</CustomField>