force-app/main/default/objects/ND__c/fields/Date_envoi_ND__c.field-meta.xml
<CustomField>
    <fullName>Date_envoi_ND__c</fullName>
    <label>Date d&apos;envoi</label>
    <type>DateTime</type>
</CustomField>