force-app/main/default/objects/ND__c/fields/Date_Signature__c.field-meta.xml
<CustomField>
    <fullName>Date_Signature__c</fullName>
    <label>Date Signature</label>
    <type>DateTime</type>
</CustomField>