force-app/main/default/objects/ND__c/fields/Date_Validation_Direction_r_seau__c.field-meta.xml
<CustomField>
    <fullName>Date_Validation_Direction_r_seau__c</fullName>
    <label>Date Validation Direction réseau</label>
    <type>DateTime</type>
</CustomField>