force-app/main/default/objects/ND__c/fields/NameND_approved_directeur_reseau__c.field-meta.xml
<CustomField>
    <fullName>NameND_approved_directeur_reseau__c</fullName>
    <formula>Name+&apos;_Approuvée_Directeur_Réseau&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>NameND_approved_directeur_reseau</label>
    <type>Text</type>
</CustomField>