force-app/main/default/objects/ND__c/fields/NameND_to_approval__c.field-meta.xml
<CustomField>
    <fullName>NameND_to_approval__c</fullName>
    <formula>Name+&#39;_Pour_Approbation&#39;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>NameND_to_approval</label>
    <type>Text</type>
</CustomField>