force-app/main/default/objects/ND__c/fields/NameND_to_approval_dir_reseau__c.field-meta.xml
<CustomField>
    <fullName>NameND_to_approval_dir_reseau__c</fullName>
    <formula>Name+&apos;_Pour_Approbation_DIR_Réseau&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>NameND_to_approval_dir_reseau</label>
    <type>Text</type>
</CustomField>