force-app/main/default/objects/ND__c/fields/ND_proto_V1_g_n_r__c.field-meta.xml
<CustomField>
    <fullName>ND_proto_V1_g_n_r__c</fullName>
    <label>ND proto V1 généré</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Oui</fullName>
            </value>
            <value>
                <fullName>Non</fullName>
                <default>true</default>
                <label>Non</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>