force-app/main/default/objects/ND__c/fields/ND_siege_V2_g_n_r__c.field-meta.xml
<CustomField>
    <fullName>ND_siege_V2_g_n_r__c</fullName>
    <label>ND siege V2 généré</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Oui</fullName>
            </value>
            <value>
                <fullName>Non</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>