force-app/main/default/objects/ND__c/fields/SendLinkForSignature__c.field-meta.xml
<CustomField>
    <fullName>SendLinkForSignature__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SendLinkForSignature</label>
    <type>Checkbox</type>
</CustomField>