force-app/main/default/objects/ND__c/fields/Sign_e_par_la_Direction__c.field-meta.xml
<CustomField>
    <fullName>Sign_e_par_la_Direction__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Signée par la Direction</label>
    <type>Checkbox</type>
</CustomField>