force-app/main/default/objects/ND__c/fields/Statut_Approbation_Directeur_R_seau_ND__c.field-meta.xml
<CustomField>
    <fullName>Statut_Approbation_Directeur_R_seau_ND__c</fullName>
    <label>Statut Approbation Directeur Réseau ND</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>En Attente</fullName>
            </value>
            <value>
                <fullName>Approuvée</fullName>
            </value>
            <value>
                <fullName>Non approuvée</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>