force-app/main/default/objects/ND__c/fields/Statut_ND__c.field-meta.xml
<CustomField>
    <fullName>Statut_ND__c</fullName>
    <label>Statut ND</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>En Attente</fullName>
                <default>true</default>
                <label>En Attente</label>
            </value>
            <value>
                <fullName>Approuvée</fullName>
                <label>Approuvée Direction Réseau</label>
            </value>
            <value>
                <fullName>Signée</fullName>
                <label>Approuvée Directeur Réseau</label>
            </value>
            <value>
                <fullName>Non Approuvée Direction Réseau</fullName>
                <label>Non Approuvée DIR_RESEAU</label>
            </value>
            <value>
                <fullName>Envoyée DFC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>