force-app/main/default/objects/ND__c/fields/Statut_Validation_Direction_R_seau_ND__c.field-meta.xml
<CustomField>
    <fullName>Statut_Validation_Direction_R_seau_ND__c</fullName>
    <label>Statut Approbation Direction Réseau ND</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>En attente</fullName>
                <default>true</default>
                <label>En Attente</label>
            </value>
            <value>
                <fullName>Approuvé</fullName>
                <label>Approuvée</label>
            </value>
            <value>
                <fullName>nonapprouve</fullName>
                <label>Non approuvée</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>