force-app/main/default/objects/ND__c/fields/Type_Note_de_D_pense__c.field-meta.xml
<CustomField>
    <fullName>Type_Note_de_D_pense__c</fullName>
    <label>Type Note de Dépense</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Protocolaire</fullName>
            </value>
            <value>
                <fullName>Appréciation du Siège</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>