force-app/main/default/objects/ND__c/fields/Valid_e__c.field-meta.xml
<CustomField>
    <fullName>Valid_e__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Envoyée à la DFC</label>
    <type>Checkbox</type>
</CustomField>