force-app/main/default/objects/ND__c/recordTypes/Appr_ciation_du_Si_ge.recordType-meta.xml
<RecordType>
    <fullName>Appr_ciation_du_Si_ge</fullName>
    <active>true</active>
    <label>Appréciation du Siège</label>
</RecordType>