force-app/main/default/objects/ND__c/recordTypes/Protocolaire.recordType-meta.xml
<RecordType>
    <fullName>Protocolaire</fullName>
    <active>true</active>
    <label>Protocolaire</label>
</RecordType>