force-app/main/default/objects/ND__c/validationRules/Signed_before_dfc.validationRule-meta.xml
<ValidationRule>
    <fullName>Signed_before_dfc</fullName>
    <active>true</active>
    <errorConditionFormula>AND (   Valid_e__c =TRUE,  NOT ( ISPICKVAL( Statut_Approbation_Directeur_R_seau_ND__c , &apos;Approuvée&apos;) ) )</errorConditionFormula>
    <errorMessage>La note de dépense doit être approuvée par le directeur de réseau avant de l&apos;envoyer à la DFC.</errorMessage>
</ValidationRule>