force-app/main/default/objects/ND__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Count_Don__c</columns>
    <columns>Statut_ND__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>